--- a/core/components/AuthBox/styles.less
+++ b/core/components/AuthBox/styles.less
@@ -87,6 +87,7 @@
 }
 
 .auth-box-root {
+  height: auto !important;
   margin: @font-size-text-Md 0;
   width: calc(@spacing-space-7xl - 2 * @spacing-space-Lg); //-2x padding
   padding: @spacing-space-Lg;
@@ -101,6 +102,7 @@
   box-shadow: hsl(0, 0%, 50%) 0 4px 10px 0,
     @colors-primary-100 0px -0px 20px -6px;
   background-color: white;
+
 }
 
 .auth-box-form {
